# pico-midi

./: .gitignore  AGENTS.md  README.md  TOUCHPADS.md  opencode.json
.github/workflows/: deploy-pages.yml  firmware-check.yml  release-firmware.yml  ui-tests.yml
.opencode/agents/: review.md
firmware/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  memory-rp2040.x  memory-rp2350.x
firmware/.cargo/: config.toml
firmware/src/: audio.rs  compressor.rs  config.rs  expr.rs  input.rs  input_state.rs  looper.rs  main.rs  midi.rs  polling.rs  reverb.rs  serial.rs  synth.rs  ui_log.rs  usb_audio.rs
ui/: configurator.html  index.html  package-lock.json  package.json  playwright.config.js  style.css
ui/components/: app-toolbar.js  app.js  collapsible-card.js  config-panel.js  connect-banner.js  context-panel.js  expr-editor.js  expr.js  helpers.js  item-list.js  log-panel.js  loop-control.js  midi-channel.js  pinout-guide.js  pinout-modal.js  project-section.js  protocol.js  ref-modal.js  save-banner.js  section-nav.js  serial-log.js  status-bar.js  synth-control.js  toast-notification.js  toggle-section.js  toolbar-bar.js
ui/tests/: midictrl.spec.js
