[package]
name = "midictrl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040", "embassy-rp/boot2-w25q080"]
rp2350 = ["embassy-rp/rp235xa"]

[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10", features = ["time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.6" }
embassy-time = { version = "0.5" }
embassy-futures = { version = "0.1" }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
static_cell = "2"
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
